[Bug 1199555] RTL Locales out of view

--- a/kitsune/sumo/static/sumo/less/questions.less
+++ b/kitsune/sumo/static/sumo/less/questions.less
@@ -409,7 +409,8 @@ h2 {
 
     textarea {
       margin-top: 10px;
-      width: 510px;
+      width: 500px;
+      padding: 0 5px;
     }
 
     .editor-tools {
